# SCZR-shapes-recognition

./: .gitignore  CMakeLists.txt  Makefile  README.md  plots.py  run_fifo_all.sh  run_not_stressed.sh  run_stressed.sh
include/: message.hpp  pqueue.hpp  semaphoreop.hpp
src/: capture.cpp  configure.cpp  convert.cpp  data.cpp  destroyer.cpp  draw.cpp  initializer.cpp  pqueue.cpp  semaphoreop.cpp
